# GPosLive

./: .gitignore  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.py.old
gposlive/: hooks.py  modules.txt  uninstall.py
gposlive/config/: docs.py  gposlive.py
gposlive/fixtures/: custom_field.json
gposlive/gposlive/api/: customer.py  invoice.py  m_pesa.py  payment_entry.py  pos_profile.js  posapp.py
gposlive/gposlive/doctype/delivery_charges/: delivery_charges.json  delivery_charges.py
gposlive/gposlive/doctype/delivery_charges_pos_profile/: delivery_charges_pos_profile.json
gposlive/gposlive/doctype/mpesa_c2b_register_url/: mpesa_c2b_register_url.json  mpesa_c2b_register_url.py
gposlive/gposlive/doctype/mpesa_payment_register/: mpesa_payment_register.json  mpesa_payment_register.py
gposlive/gposlive/doctype/pos_closing_shift/: pos_closing_shift.js  pos_closing_shift.json  pos_closing_shift.py
gposlive/gposlive/doctype/pos_closing_shift_detail/: pos_closing_shift_detail.json
gposlive/gposlive/doctype/pos_closing_shift_taxes/: pos_closing_shift_taxes.json
gposlive/gposlive/doctype/pos_coupon/: pos_coupon.json
gposlive/gposlive/doctype/pos_coupon_detail/: pos_coupon_detail.json
gposlive/gposlive/doctype/pos_offer/: pos_offer.js  pos_offer.json
gposlive/gposlive/doctype/pos_offer_detail/: pos_offer_detail.json
gposlive/gposlive/doctype/pos_opening_shift/: pos_opening_shift.js  pos_opening_shift.json  pos_opening_shift.py
gposlive/public/css/: claudionday.bundle.css
gposlive/translations/: pt.csv
(+27 files in other folders)
