[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gposlive"
description = "Gposlive"
version = "15.1.1"
authors = [
  { name="Claudion.com", email="support@claudion.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "frappe>=14.0.0,<17.0.0"
]
license = "MIT"

[tool.setuptools.packages.find]
include = ["gposlive", "wiki_images"]

[tool.bench.frappe-dependencies]
frappe = ">=14.0.0,<17.0.0"